2013-02-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/module_manager.php,
	godmode/agentes/configurar_agente.php: fixed the load the module
	editor form into the policies.

2013-02-05  Sancho Lerena <slerena@artica.es>

	* pandoradb_data.sql: Improved default config values.


2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/modules/manage_network_components.php: cleaned source code
	style.
	
	* operation/netflow/nf_live_view.php: fixed the lost to simplified
	the filter.

2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_ui.php: fixed the javascript of function
	"ui_toggle".

2013-02-04  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_config.php: Added the config variable
	  netflow_disable_custom_lvfilters.

2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/events/events.php: fixed exotic bug with the var name
	history in the javascript.

2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_graph.php: re-enabled the baseline for the
	reports.
	
	Fixes: #3599961

2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/reporting_builder.item_editor.php: fixed the
	ovewrite the var $sql from netflow filter.
	
	Fixes: #3602194

2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_xml.php, include/functions_reporting.php,
	operation/reporting/reporting_xml.php: fixed the SLA agent name
	with entities differents to hexadecimal entities. And fixed the
	serialized data when has not separators.
	
	Fixes: #3602204

2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/reporting_builder.item_editor.php: fixed lost
	global var $meta in the SLA table.
	
	Fixes: #3602721

2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/search_modules.php: fixed the image to edit.
	
	* include/functions_html.php: fixed check string values in function
	"html_print_input_hidden".
	
	Fixes: #3603084
